# url-shortener

./: Cargo.toml  README.md
src/: main.rs
src/adapters/: id_provider.rs  mod.rs  short_url_provider.rs
src/app/: error.rs  mod.rs
src/app/command/: generate_url.rs  mod.rs
src/app/query/: get_full_url.rs
src/storage/: error.rs  mod.rs
src/storage/in_memory/: mod.rs
src/transport/http/: error.rs  mod.rs
